--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mitt": "^3.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
+    "vuetify": "^3.3.16",
     "vuex": "^4.1.0",
     "xlsx": "^0.18.5"
   },
