--- a/compose.yaml
+++ b/compose.yaml
@@ -9,12 +9,13 @@
 # https://github.com/docker/awesome-compose
 services:
   server:
-    build: .
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+    build:
+      context: .
+    environment:
+      NODE_ENV: production
     ports:
-      - 5173:5173
+      - 3000:3000
+
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
